--- a/.github/workflows/gitdeployment.yml
+++ b/.github/workflows/gitdeployment.yml
@@ -39,15 +39,15 @@ on:
 
 env:
   ACR_RESOURCE_GROUP: rg-dev
-  AZURE_CONTAINER_REGISTRY: aksdemoregistry
-  CONTAINER_NAME: image-workflow-1742207804908
+  AZURE_CONTAINER_REGISTRY: conteainerreg
+  CONTAINER_NAME: image-workflow-1742208965546
   CLUSTER_NAME: aksdemo
   CLUSTER_RESOURCE_GROUP: rg-dev
   CLUSTER_RESOURCE_TYPE: Microsoft.ContainerService/managedClusters
   DEPLOYMENT_MANIFEST_PATH: ./manifests
   DOCKER_FILE: ./Dockerfile
   BUILD_CONTEXT_PATH: ./
-  NAMESPACE: namespace-workflow-1742207804908
+  NAMESPACE: namespace-workflow-1742208965546
   ENABLENAMESPACECREATION: false
   AUTH_TYPE: SERVICE_PRINCIPAL
 
